Import of DINOMITE/Shell-Verbose-0.1.1-TRIAL from CPAN.
gitpan-cpan-distribution: Shell-Verbose
gitpan-cpan-version:      0.1.1-TRIAL
gitpan-cpan-path:         DINOMITE/Shell-Verbose-0.1.1-TRIAL.tar.gz
gitpan-cpan-author:       DINOMITE
gitpan-cpan-maturity:     developer

--- a/README
+++ b/README
@@ -31,5 +31,5 @@ DESCRIPTION
     A simple wrapper for system() that prints the command
 
 AUTHOR
-    Drew Stephens <drew@dinomit.net>
+    Drew Stephens <drew@dinomite.net>
 
