Import of DINOMITE/Shell-Verbose-0.2 from CPAN.
gitpan-cpan-distribution: Shell-Verbose
gitpan-cpan-version:      0.2
gitpan-cpan-path:         DINOMITE/Shell-Verbose-0.2.tar.gz
gitpan-cpan-author:       DINOMITE
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -30,6 +30,9 @@ SYNOPSIS
 DESCRIPTION
     A simple wrapper for system() that prints the command
 
+SOURCE
+    https://github.com/dinomite/Shell-Verbose
+
 AUTHOR
     Drew Stephens <drew@dinomite.net>
 
